<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:layout_marginTop="20dp"
        android:layout_below="@id/heading"
        android:layout_marginStart="50dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/excellent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excellent"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <RadioButton
            android:id="@+id/good_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"/>
        <RadioButton
            android:id="@+id/okay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"/>
        <RadioButton
            android:id="@+id/poor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/poor"
            android:textStyle="bold"
            android:textColor="@color/red"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_marginStart="30dp"
        android:text="@string/checkbox1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_1"
        android:layout_marginStart="30dp"
        android:text="@string/checkbox2"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_2"
        android:layout_marginStart="30dp"
        android:text="@string/checkbox3"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/checkbox_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_3"
        android:layout_marginStart="30dp"
        android:text="@string/checkbox4"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/suggestion_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_label"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/checkbox_4"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:textStyle="bold"/>
    <EditText
       android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/suggestion_text"
        android:layout_below="@+id/suggestion_view"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:hint="@string/suggestion_request"
        android:textAlignment="center"
        android:maxLength="40"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:backgroundTint="@color/black"
        android:autofillHints="@string/suggestion_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/submit_btn"
        android:layout_below="@+id/suggestion_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_view"
        android:layout_below="@+id/submit_btn"
        android:layout_centerHorizontal="true"
        android:textAlignment="textStart"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>

</RelativeLayout>